[gd_scene load_steps=4 format=3 uid="uid://lvw4f4ac13jx"]

[ext_resource type="PackedScene" uid="uid://cjwffa0c150l8" path="res://scenes/laser/laser.tscn" id="1_ko2i3"]
[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_yhdp0"]
[ext_resource type="PackedScene" uid="uid://bkmd5cupsdbxq" path="res://scenes/pipe/pipes.tscn" id="2_7aq35"]

[node name="Pipes" type="Node2D" groups=["pipe"]]
script = ExtResource("1_yhdp0")

[node name="Laser" parent="." instance=ExtResource("1_ko2i3")]

[node name="Lower" parent="." groups=["pipe"] instance=ExtResource("2_7aq35")]
position = Vector2(2.08165e-12, 80)

[node name="Upper" parent="." instance=ExtResource("2_7aq35")]
position = Vector2(2.08165e-12, -80)
rotation = 3.14159

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(104, 0)

[connection signal="body_exited" from="Laser" to="." method="_on_laser_body_exited"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_pipes_screen_exited"]
